# DuoScript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
pkg/: CMakeLists.txt  platform.cmake
public/: IFiles.h  ILogger.h  ILoop.h  IModule.h  IPlatform.h  IPlugin.h  IProfiler.h  IScript.h  IScriptController.h  IScriptEvent.h  IScriptMethod.h
public/AwesomeHook/: AwesomeHook.h  Common.h  Templating.h  example.txt  example2.txt
public/Entities/: IPointerEntity.h
public/Generic/: IntMap.h  StringLiteral.h  StringMap.h
public/Helpers/: Path.h
src/: Macro.h
src/Core/: Alloc.cpp  Core.cpp  Core.h  Duo.cpp  Duo.h  DuoMetamod.cpp  DuoMetamod.h  DuoScript.cpp  DuoScript.h  Loop.cpp  Loop.h
src/Core/Controllers/: FileSystemController.cpp  FileSystemController.h  LogController.cpp  LogController.h  LoopController.cpp  LoopController.h  PerformanceController.cpp  PerformanceController.h  ThreadController.cpp  ThreadController.h
src/Core/Files/: Files.cpp  Files.h
src/Core/Logging/: Log.cpp  Log.h
src/Core/Loop/: AsyncHandle.cpp  AsyncHandle.h  DelayHandle.cpp  DelayHandle.h  Loop.cpp  Loop.h  WorkHandle.cpp  WorkHandle.h
src/Core/Modules/: ControllerManagerSink.cpp  ControllerManagerSink.h  ModuleInstance.cpp  ModuleInstance.h  ModuleManager.cpp  ModuleManager.h
src/Core/Plugins/: Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h
src/Core/Plugins/Objects/: PluginFileController.cpp  PluginFileController.h  PluginSingletonController.cpp  PluginSingletonController.h
src/Core/Script/: ScriptCall.cpp  ScriptCall.h  ScriptControllerEvents.cpp  ScriptControllerEvents.h  ScriptControllers.cpp  ScriptControllers.h  ScriptFiber.cpp  ScriptFiber.h  ScriptHandles.cpp  ScriptHandles.h  ScriptObject.cpp  ScriptObject.h  ScriptVM.cpp  ScriptVM.h
src/Core/Scripting/: Script.cpp  Script.h  ScriptIsolate.cpp  ScriptIsolate.h  ScriptMethod.cpp  ScriptMethod.h  ScriptResults.cpp  ScriptResults.h  ScriptVM.cpp  ScriptVM.h
src/Cstrike/: DuoModule.cpp  DuoModule.h
src/Engine/: DuoModule.cpp  DuoModule.h
src/Logic/: DuoModule.cpp  DuoModule.h  Logic.cpp  Logic.h  LogicGlobals.h
src/Logic/Files/: FileSystemController.cpp  FileSystemController.h  ZipController.cpp  ZipController.h
src/Logic/Generic/: LogController.cpp  LogController.h  PerformanceController.cpp  PerformanceController.h
src/Logic/Memory/: PointerController.cpp  PointerController.h
src/Logic/Net/: HttpRequestController.cpp  HttpRequestController.h
src/Logic/Threading/: FiberController.cpp  FiberController.h
src/Metamod/: Duo.cpp  Duo.h  DuoMetamod.cpp  DuoMetamod.h
src/Metamod/Modules/: ControllerManagerSink.cpp  ControllerManagerSink.h  ModuleInstance.cpp  ModuleInstance.h  ModuleManager.cpp  ModuleManager.h
src/Sdk/: Main.cpp  Main.h
src/Sdk/Controllers/: LuauCheckResult.cpp  LuauCheckResult.h  LuauCompilerController.cpp  LuauCompilerController.h  LuauFrontend.cpp  LuauFrontend.h  LuauType.cpp  LuauType.h
src/Sdk/Provider/: index.luau
src/Sdk/Provider/Compiler/: typecheck.luau
src/Sdk/Provider/Tree/: FileTree.luau
test/Workbench/: Main.cpp  TestController.cpp  TestController.h
